# rust-url-shortener

./: Cargo.toml  README.md
src/: main.rs  state.rs
src/handlers/: page_handlers.rs  redirect_handlers.rs  short_url_handlers.rs  verify_handlers.rs
src/models/: migrate.rs  mod.rs
src/schemas/: mod.rs  short_url_schemas.rs
src/templates/: index.html  redirect.html
src/templates/verify/: error.html  failed.html  success.html
src/utils/: converter.rs  generator.rs  mod.rs
src/validators/: mod.rs  validate_url.rs
