[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres"] }
rand = "0.8"
rusqlite = "0.32.1"
nanoid = "0.4.0"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
lettre = "0.11"
reqwest = { version = "0.12.9", features = ["json"] }
regex = "1.10"
dotenv = "0.15.0"